--- a/style.css
+++ b/style.css
@@ -38,6 +38,48 @@ div#options{
     background-color: rgba(0, 0, 0, 0.233);
     border-right: 5px solid rgb(000, 000, 000);
 }
+div#icon{
+    position: absolute;
+    transform: translateX(-50%);
+    left: 50%;
+    top: 10px;
+    height: 45px;
+    width: 45px;
+}
+div#icon > hr{
+    box-shadow: inset 0 -3px 3px rgba(2, 2, 58, 0.295);
+    height: 8px;
+    background-color: rgb(255, 255, 255);
+    margin-bottom: 10px;
+    border-radius: 9px;
+    border: none;
+}
+div#opcontent{
+    display: none;
+    position: relative;
+    top: 10px;
+    left: 0;
+    width: 300px;
+    padding-left: 10px;
+    box-sizing: border-box;
+    color: rgb(255, 255, 255);
+
+}
+div#credits{
+    position: absolute;
+    transform: translateX(-50%);
+    left: 50%;
+    bottom: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    line-height: 1.2em;
+    color: var(--color4);
+    font-size: 2.9em;
+    font-weight: bolder;
+    text-align: center;
+    text-shadow: 0 0 3px var(--color4);
+}
 
 
 main{
@@ -53,7 +95,7 @@ h1{
     letter-spacing: 2px;
 }
 
-hr{
+hr#mainhr{
     box-shadow: none;
     border: none;
     background-color: rgb(000, 000, 000);
